--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,8 @@
    "[python]": {
       "editor.defaultFormatter": "ms-python.black-formatter"
    },
-   "python.formatting.provider": "none"
+   "python.formatting.provider": "none",
+   "[html]": {
+      "editor.defaultFormatter": "vscode.html-language-features"
+   }
 }
