--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,8 @@
    "python.formatting.provider": "none",
    "[html]": {
       "editor.defaultFormatter": "vscode.html-language-features"
+   },
+   "[json]": {
+      "editor.defaultFormatter": "vscode.json-language-features"
    }
 }
