--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,6 @@
    },
    "[json]": {
       "editor.defaultFormatter": "vscode.json-language-features"
-   }
+   },
+   "python.analysis.autoImportCompletions": true
 }
